--- a/Basics/HTML-JS/Js-Games/TicTacToe/index.html
+++ b/Basics/HTML-JS/Js-Games/TicTacToe/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- custom css -->
     <link rel="stylesheet" href="style.css" />
+    <!-- Add confetti library CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
     <title>Tic Tac Toe Game</title>
   </head>
   <body>
