--- a/Basics/HTML-JS/Events/index.html
+++ b/Basics/HTML-JS/Events/index.html
@@ -17,6 +17,7 @@
       Box
     </div> -->
     <!-- <button onclick="console.log('Button is clicked')">Click me</button> -->
+
     <!-- CLASS-47 -->
     <!-- <button class="my-button">Click me</button>
     <br /> -->
@@ -33,8 +34,8 @@
     <button id="black">Black</button>
     <br />  -->
     <!-- CLASS-48 -->
-    <div class="container">
-      <h3>Assignment on Event-Handling</h3>
+    <!-- <div class="container"> -->
+    <!-- <h3>Assignment on Event-Handling</h3>
       <p>Enter age in years and calculate it in months using JS program.</p>
 
       <label for="user-age">Enter your age (in years):</label>
@@ -42,11 +43,15 @@
       <button id="calculate">Calculate</button>
       <div id="ageConverter"></div>
       <button id="reset">Reset</button>
-    </div>
+    </div> -->
 
     <!-- CLASS-49 -->
-    <!-- <button>Click me</button> -->
+    <!-- <buttont>Click me</buttont> -->
 
+    <!-- show password Example -->
+    <input type="password" name="password" id="password" />
+
+    <button class="btn">Show Password</button>
     <script src="script.js"></script>
   </body>
 </html>
